@@ -60,6 +60,12 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${mavenSurefire.version}</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
             <plugin>
